--- a/index.css
+++ b/index.css
@@ -134,6 +134,10 @@ p {
     opacity: 1;
   }
 }
+
+#personal {
+  background-color: #C4EEFF;
+}
 /*End of FCC projects part*/
 
 /*start of footer part*/
